@@ -1,7 +1,7 @@
 ﻿## Interface: 30300
 ## Title: InterruptInRaid
 ## Author: Chaodhib, Phalk (original author)
-## Version: 0.1
+## Version: 1.0
 ## Notes: Spell interrupt announcer for raids based on Pare! Interrupt.
 ## eMail: chaodhib@gmail.com
 ## DefaultState: Enabled
